Did game from scratch. It still doesn't work.  Space bar doesn't make the bird jump. The game doesn't restart. Game starts, but instant death due to inability to jump.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         <style>
             body {
-                background: #9296e6;
+                background: #000000;
             }
         </style>
       
